# toolchain

./: .confige  Makefile  Makefile.RG350M  Makefile.pg2  Makefile.pg2v2  Makefile.playgo  Makefile.playgov2  Makefile.rg280m  Makefile.rg280v  Makefile.rg300x  Makefile.rg350p  READ cpu stock-overclock option compilation.txt  README  create_flasher.sh  create_kernel.sh  create_kernel_m.sh  create_kernel_pg.sh  create_updater.sh  create_updater_m.sh  create_updater_pg.sh  create_updater_pgv2.sh  defconfig  how decompress and compress rootfs.squashfs.txt  how make diff patchs.txt  list-sonames.sh  logo_rg350_clut224.ppm  quick-rg.sh  rebuild.sh  update repository.txt  version.txt
Updaters/: create_kernel_pgv2.sh  create_updater.sh  create_updater_pg.sh  create_updater_pgv2.sh  create_updater_play.sh
arch/: Config.in.mips
boot/: Config.in
configs/: gcw0_defconfig  playgo_defconfig  playgov2_defconfig  pocketgo2_defconfig  pocketgo2v2_defconfig  rg280m_defconfig  rg280v_defconfig  rg300x_defconfig  rg350_defconfig  rg350m_defconfig  rg350p_defconfig
flasher/: flasher.sh
gmenu2x/: .gitignore  Makefile.am  background.h  battery.cpp  browsedialog.cpp  configure.in  cpu.cpp  cpu.h  dialog.cpp  dirdialog.cpp  filedialog.h  filelister.cpp  filelister.h  font.cpp  gmenu2x.cpp  gmenu2x.h  iconbutton.h  imagedialog.cpp  imageio.cpp  inputdialog.cpp  inputdialog.h  inputmanager.h  launcher.cpp  launcher.h  link.h  linkapp.cpp  linkapp.h  mediamonitor.cpp  menu.cpp  menusetting.h  menusettingbool.cpp  menusettingbool.h  menusettingdir.h  menusettingfile.cpp  menusettingimage.cpp  menusettingimage.h  menusettingmultistring.cpp  menusettingrgba.cpp  menusettingrgba.h  menusettingstring.cpp  (+18 more)
gmenu2x/data/: Makefile.am
gmenu2x/data/docs/Spanish/: 01 Primeros pasos.txt
gmenu2x/data/platform/a320/: gmenu2x.conf
gmenu2x/data/platform/a320/sections/settings/: 10_poweroff  20_reboot  30_suspend  60_tv_out
gmenu2x/data/platform/gcw0/: gmenu2x.conf
gmenu2x/data/platform/nanonote/: gmenu2x.conf  gmenu2x.sh  input.conf
gmenu2x/data/platform/pandora/: gmenu2x.conf  input.conf
gmenu2x/data/platform/pandora/sections/settings/: originalsettings  system
gmenu2x/data/skins/320x240/Default/: skin.conf
gmenu2x/data/translations/: Basque  Danish  Dutch  Français  Polish  Russian  Spanish  Swedish  Turkish
gmenu2x/src/: .gitignore  Makefile  Makefile.am  Makefile.in  background.cpp  battery.cpp  battery.h  browsedialog.cpp  browsedialog.h  buttonbox.cpp  buttonbox.h  clock.cpp  clock.h  contextmenu.cpp  contextmenu.h  cpu.cpp  debug.h  dialog.h  dirdialog.h  filedialog.cpp  font.h  gmenu2x.cpp  gmenu2x.h  helppopup.cpp  helppopup.h  iconbutton.cpp  imagedialog.h  imageio.h  inputmanager.cpp  inputmanager.h  layer.h  link.cpp  linkapp.cpp  linkapp.h  mediamonitor.h  menu.cpp  menu.h  menusetting.cpp  menusettingdir.cpp  menusettingfile.h  (+19 more)
imager/: assemble_images.sh  create_data_image.sh  create_mbr.sh  create_system_image.sh  partition_layout.sh  resize_data_part.target-sh
linux/: Config.in  linux.mk
package/: Config.in  Config.in.host  Makefile.in  pkg-meson.mk
update/: RG350-Kernel-update-hdmi-2020-05-10.opk  date.txt  default.gcw0.desktop  mininit-syspart.sha1  modules.squashfs  modules.squashfs.sha1  rg350-kernel-1.7.9-2019-12-15.opk  rootfs.squashfs.sha1  ubiboot-rg350.bin.sha1  update.sh  version.txt  vmlinuz.bin.sha1
update_m/: default.gcw0.desktop  mininit-syspart.sha1  modules.squashfs  modules.squashfs.sha1  rootfs.squashfs.sha1  update.sh  version.txt  vmlinuz.bin.sha1
updatepg/: messages
updaters/: create_flasher.sh  create_kernel.sh  create_kernel_m.sh  create_kernel_pg.sh  create_kernel_pgv2.sh  create_kernel_playgo.sh  create_kernel_pocketgo2.sh  create_kernel_pocketgo2v2.sh  create_kernel_rg280m.sh  create_kernel_rg280v.sh  create_kernel_rg300x.sh  create_kernel_rg350.sh  create_kernel_rg350m.sh  create_kernel_rg350p.sh  create_kernel_v.sh  create_updater.sh  create_updater_m.sh  create_updater_pg.sh  create_updater_pgv2.sh  create_updater_play.sh  create_updater_playgo.sh  create_updater_playgov2.sh  (+9 more)
(+1494 files in other folders)
